fixed message overflow on mobile

--- a/web/src/scss/_room.scss
+++ b/web/src/scss/_room.scss
@@ -11,6 +11,10 @@
   }
 }
 
+.up-room > div{
+  height: calc(100vh - ( #{$nav-height} + ( #{$padding-std} * 2 )));
+}
+
 .up-room__chat {
   width: 100%;
   height: 100%;
@@ -84,6 +88,7 @@
   padding: $padding-std * 2;
   justify-content: space-between;
   border-top: 1px solid $color-bg;
+  min-height: 65px;
 
   input {
     width: 100%;
